# solomon-olufelo-projects

./: .gitignore  CHANGELOG.md  README.md
projects/web-development/JobScanner Pro/: .gitignore  BUILD_INSTRUCTIONS.md  JobScannerPro-CLI.spec  JobScannerPro-GUI.spec  JobScannerPro.spec  PRIVACY.md  README.md  build_exe.py  build_exe_fixed.py  build_simple.py  config.yml  debug_brampton_search.py  pyproject.toml  requirements.txt  setup.py  test_youth_scraper.py
projects/web-development/JobScanner Pro/.cursor/rules/: 1.mdc  2.mdc
projects/web-development/JobScanner Pro/ai/: changelog.md  plan.md  prd.md  rules.md
projects/web-development/JobScanner Pro/assets/: Solomon_Resume.rtf  Solomon_Resume.rtf:Zone.Identifier
projects/web-development/JobScanner Pro/debug_html/: craigslist.html  craigslist_pretty.html  jobbank.html  jobbank_pretty.html  jobbank_sample.html  kijiji.html  kijiji_pretty.html
projects/web-development/JobScanner Pro/jobscanner/: config.yml  requirements.txt
projects/web-development/JobScanner Pro/jobscanner/config/: env.example
projects/web-development/JobScanner Pro/jobscanner/core/: __init__.py  filters.py  search.py
projects/web-development/JobScanner Pro/jobscanner/gui/: app_tkinter.py
projects/web-development/JobScanner Pro/jobscanner/scrapers/: base.py  craigslist.py  jobbank.py  (+1 more)
projects/web-development/JobScanner Pro/outputs/: job_results.csv
projects/web-development/JobScanner Pro/tests/: __init__.py  conftest.py  test_cli.py  test_craigslist.py  test_filters.py  test_gui.py  test_indeed.py  test_jobbank.py  test_kijiji.py
(+1098 files in other folders)
